fix: add overflow-x hidden and width 100% to #dashboard

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -10,6 +10,10 @@ body {
   font-family: $font-family;
   background-color: $body-bg;
   width: 100%;
+}
+
+#dashboard {
+  width: 100%;
   overflow-x: hidden;
 }
 
